test/regress/regress-10.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func
    (local i32)
    block
      unreachable
      tee_local 0
    end))
(;; STDERR ;;;
out/test/regress/regress-10.txt:9:5: error: type mismatch at end of block, expected [] but got [i32]
    end))
    ^^^
;;; STDERR ;;)
